--- a/.gihub/workflows/django.yml
+++ b/.gihub/workflows/django.yml
@@ -1,22 +1,23 @@
 name: Django CI
 
-on: [ pull_request ]
+on:
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: 3.8
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
+    - name: Copying configurations
+      run: |
+        cp contrib/env-sample .env
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
