--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,13 +8,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
     - name: Copying configurations
       run: |
         cp contrib/env-sample .env
@@ -23,5 +26,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
     - name: Lint with flake8
-        run: |
-          poetry run flake8 .
+      run: |
+        poetry run flake8 .
