--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ gunicorn = "^20.0.4"
 python-decouple = "^3.3"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.5"
+djangorestframework = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
