--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-decouple = "^3.3"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.5"
 djangorestframework = "^3.11.0"
+django-cors-headers = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
