--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.5"
 djangorestframework = "^3.11.0"
 django-cors-headers = "^3.4.0"
+drf-yasg = "^1.17.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
